# coding-challenges-core

./: README.md  pyproject.toml
games/: connectfour.py
src/coding_challenges_core/: __init__.py  bot.py  limits.py  tournament.py
src/coding_challenges_core/brackets/: _util.py  abc.py  elimination.py  round_robin.py  swiss.py
tests/: test_limits.py
tests/brackets/: test_match.py  test_single_elimation.py
