[project]
name = "coding-challenges-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luna", email = "itsactuallyluna9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
